--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@ de optimización para SEO.</p>
     <div class="container">
         <div class="row align-center justify-content-center align-items-center">
             
-            <div class="col-sm-12 col-lg-4 mbr-text mbr-fonts-style mbr-light display-7">Phone: +51 (1) 417 2000
+            <div class="col-sm-12 col-lg-4 mbr-text mbr-fonts-style mbr-light display-7">Phone: +51 (1) 417 2000 / 411 8888
 <div>Email: contacto@gurusoluciones.com
 </div><div>Dirección: Av. Paseo de la República 3775,&nbsp;</div><div>Piso 2, San Isidro, Lima, Perú</div></div>
             
