create github pages

--- a/index.html
+++ b/index.html
@@ -852,10 +852,13 @@ de optimización para SEO.</p>
                 </div>
                 <h2 class="form-title pb-3 mbr-fonts-style mbr-white display-2">Bríndanos tu nombre, correo o teléfono</h2>
                 <h4 class="mbr-fonts-style form-subtitle align-left display-7">&nbsp;</h4>
-                <div data-form-alert="" hidden="">¡Gracias, nospondremos en contacto contigo!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0yW/bouCsTlIUiYluQEJtfXo/waNpyPQUgUyTZ4bHM8p72laQFDa4z9EhznGyIQHnE1bPttrLhugxRiqOkQPzEKHWnZHXeJxc+EwnsMJsMA6QZRaApok/H7EeE2iDGn2">
+                <div data-form-alert="" hidden="">¡Gracias, nos pondremos en contacto contigo!</div>
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eJvN5b2viiYDhCRC8eouihuL6r1yOYqqrxmkhpeC4k+SzawxXEpUZ5xTGS/EnSdS5FNZ4c0/CSDVSc2HN2PkOyskydrzSYq3hdMI5ESoa33W5lSSIVkxDDsVAGU59cj+">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" data-form-field="Name" required="" placeholder="Tu nombre" id="name-header2-1q">
+                    </div>
+                     <div class="input-wrap" data-for="RUC">
+                        <input type="text" class="field display-7" name="ruc" data-form-field="RUC" required="" placeholder="Tu RUC" id="ruc-header2-1q">
                     </div>
                     <div class="input-wrap" data-for="email">
                         <input type="text" class="field display-7" name="email" data-form-field="E-mail" required="" placeholder="Tu correo electrónico" id="email-header2-1q">
@@ -890,7 +893,7 @@ de optimización para SEO.</p>
                     <div data-form-alert="" hidden="" class="align-center">¡Gracias por rellenar el formulario!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="kga5tCuNKD9SbJy7gXq2tqLHQgD+mhZQtPH7TnYOk0pu5ykRkCorNyGlwB5TP3qmK2fNgYI3Pi80PcFO5xia4um2nZfQ/r3HwFC19iai4FlC63vcPcIGKuYHraL1yGmG" data-form-email="true">
+                        <input type="hidden" value="l9ltxszHvbC9ZTNDNkhH31CYl35+DH160Wa6p53ioTg6PUdb6lzXU7ay+tnYxfT6szS0ZPVkLFTUB37D7VyhRlezbs3uo1EOWqE/yFyvrHahr+wPALEJo0hbmvSKNBre" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Ingresa tu Correo electrónico*" id="email-footer3-4">
                         </div>
