create github pages

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ de optimización para SEO.</p>
                     <div class="plan-body">
                         <div class="plan-list align-center">
                             <ul class="list-group list-group-flush mbr-white mbr-fonts-style display-4">
-                                <li class="list-group-item"><span style="background-color: initial;">3 Ctas. de Correo (6gb)&nbsp;</span><br></li><li class="list-group-item">6 fotos precargadas, ilimitadas por gestor</li><li class="list-group-item">Certificado SSL 
+                                <li class="list-group-item"><span style="background-color: initial;">3 Ctas. de Correo - 6gb c/u</span><br></li><li class="list-group-item">6 fotos precargadas, ilimitadas por gestor</li><li class="list-group-item">Certificado SSL 
 </li><li class="list-group-item">Estadísticas Web 
 </li><li class="list-group-item">SEO Básico
 </li><li class="list-group-item">Administrador de contenido 
@@ -354,7 +354,7 @@ de optimización para SEO.</p>
                     <div class="plan-body">
                         <div class="plan-list align-center">
                             <ul class="list-group list-group-flush mbr-white mbr-fonts-style display-4">
-                                <li class="list-group-item"><span style="background-color: initial;">5 Ctas. de Correo (6gb)</span><br></li><li class="list-group-item">12 fotos precargadas, ilimitadas por gestor</li><li class="list-group-item"><span style="background-color: initial;">Certificado SSL&nbsp;</span><br></li><li class="list-group-item"><span style="background-color: initial;">Estadísticas Web&nbsp;</span></li><li class="list-group-item">SEO Básico
+                                <li class="list-group-item"><span style="background-color: initial;">5 Ctas. de Correo - 6gb c/u</span><br></li><li class="list-group-item">12 fotos precargadas, ilimitadas por gestor</li><li class="list-group-item"><span style="background-color: initial;">Certificado SSL&nbsp;</span><br></li><li class="list-group-item"><span style="background-color: initial;">Estadísticas Web&nbsp;</span></li><li class="list-group-item">SEO Básico
 </li><li class="list-group-item"><span style="background-color: initial;">Administrador de contenido&nbsp;</span><span style="background-color: initial;"></span></li><li class="list-group-item">Diseño Responsive
 </li><li class="list-group-item"><span style="background-color: initial;">ChatBot, WhatsApp</span></li><li class="list-group-item"><span style="background-color: initial;">2 Formularios</span><br></li>
                             </ul>
@@ -380,7 +380,7 @@ de optimización para SEO.</p>
                     <div class="plan-body">
                         <div class="plan-list align-center">
                             <ul class="list-group list-group-flush mbr-white mbr-fonts-style display-4">
-                                <li class="list-group-item"><span style="background-color: initial;">10 Ctas. de Correo (6gb)</span><br></li><li class="list-group-item">18 fotos precargadas, ilimitadas por gestor</li><li class="list-group-item">Certificado SSL 
+                                <li class="list-group-item"><span style="background-color: initial;">10 Ctas. de Correo - 6gb c/u</span><br></li><li class="list-group-item">18 fotos precargadas, ilimitadas por gestor</li><li class="list-group-item">Certificado SSL 
 </li><li class="list-group-item">Estadísticas Web 
 </li><li class="list-group-item">SEO Básico
 </li><li class="list-group-item">Administrador de contenido 
@@ -409,7 +409,7 @@ de optimización para SEO.</p>
                     <div class="plan-body">
                         <div class="plan-list align-center">
                             <ul class="list-group list-group-flush mbr-white mbr-fonts-style display-4">
-                                <li class="list-group-item"><span style="background-color: initial;">15 Ctas. de Correo (6gb)</span><br></li><li class="list-group-item">24 fotos precargadas, ilimitadas por gestor</li><li class="list-group-item">Certificado SSL 
+                                <li class="list-group-item"><span style="background-color: initial;">15 Ctas. de Correo - 6gb c/u</span><br></li><li class="list-group-item">24 fotos precargadas, ilimitadas por gestor</li><li class="list-group-item">Certificado SSL 
 </li><li class="list-group-item">Estadísticas Web 
 </li><li class="list-group-item">SEO Básico
 </li><li class="list-group-item">Administrador de contenido 
@@ -853,7 +853,7 @@ de optimización para SEO.</p>
                 <h2 class="form-title pb-3 mbr-fonts-style mbr-white display-2">Bríndanos tu nombre, correo o teléfono</h2>
                 <h4 class="mbr-fonts-style form-subtitle align-left display-7">&nbsp;</h4>
                 <div data-form-alert="" hidden="">¡Gracias, nos pondremos en contacto contigo!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eJvN5b2viiYDhCRC8eouihuL6r1yOYqqrxmkhpeC4k+SzawxXEpUZ5xTGS/EnSdS5FNZ4c0/CSDVSc2HN2PkOyskydrzSYq3hdMI5ESoa33W5lSSIVkxDDsVAGU59cj+">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KRLl961VNsFR6MBU2wUNSf5UNXcohXTyXq/7bXicgXFjhNBA8KUu/7nfuHmG1jRUmJLHn1BktpXok8pjBhkN2cES27ASUdXgmbSrD+SHGiNfnPHfkYq0xMh6ffvZNJfj">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" data-form-field="Name" required="" placeholder="Tu nombre" id="name-header2-1q">
                     </div>
@@ -893,7 +893,7 @@ de optimización para SEO.</p>
                     <div data-form-alert="" hidden="" class="align-center">¡Gracias por rellenar el formulario!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="l9ltxszHvbC9ZTNDNkhH31CYl35+DH160Wa6p53ioTg6PUdb6lzXU7ay+tnYxfT6szS0ZPVkLFTUB37D7VyhRlezbs3uo1EOWqE/yFyvrHahr+wPALEJo0hbmvSKNBre" data-form-email="true">
+                        <input type="hidden" value="jeJRx5c5m1PjhrSbIJAed+gtoum/eKCE2oV7RTnbrH5+kmkW5cEMTlUlR6G5h66kD/nDjiNN1bYKxm3MaVVpqdkZpoQhP+zRA5tyAgCfd0Hx/dYuTbXb592NpIm6Z17L" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Ingresa tu Correo electrónico*" id="email-footer3-4">
                         </div>
