create github pages

--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ de optimización para SEO.</p>
             <div class="card px-3 py-4 col-md-4">
                 <div class="card-wrapper flip-card">
                     <div class="card-img">
-                        <a href="https://gurudesign.websguru.pe/"><img src="assets/images/gur-design-696x371.png" alt="Mobirise" title=""></a>
+                        <a href="https://gurudesign.websguru.pe/" target="_blank"><img src="assets/images/gur-design-696x371.png" alt="Mobirise" title=""></a>
                         <div class="img-text mbr-text mbr-fonts-style align-center mbr-white display-4">Descubre</div>
                     </div>
                     <div class="card-box">
@@ -468,7 +468,7 @@ de optimización para SEO.</p>
             <div class="card px-3 py-4 col-md-4">
                 <div class="card-wrapper flip-card">
                     <div class="card-img">
-                        <a href="https://gurudigital.websguru.pe/"><img src="assets/images/guru-digital-696x371.png" alt="Mobirise" title=""></a>
+                        <a href="https://gurudigital.websguru.pe/" target="_blank"><img src="assets/images/guru-digital-696x371.png" alt="Mobirise" title=""></a>
                         <div class="img-text mbr-text mbr-fonts-style align-center mbr-white display-4">
                              Descubre</div>
                     </div>
@@ -483,7 +483,7 @@ de optimización para SEO.</p>
             <div class="card px-3 py-4 col-md-4">
                 <div class="card-wrapper flip-card">
                     <div class="card-img">
-                        <a href="https://guruinmobiliaria.websguru.pe/"><img src="assets/images/guru-inmobiliaria-696x371.png" alt="Mobirise" title=""></a>
+                        <a href="https://guruinmobiliaria.websguru.pe/" target="_blank"><img src="assets/images/guru-inmobiliaria-696x371.png" alt="Mobirise" title=""></a>
                         <div class="img-text mbr-text mbr-fonts-style align-center mbr-white display-4">Descubre</div>
                     </div>
                     <div class="card-box">
@@ -514,7 +514,7 @@ de optimización para SEO.</p>
             <div class="card px-3 py-4 col-md-4">
                 <div class="card-wrapper flip-card">
                     <div class="card-img">
-                        <a href="https://gurutravel.websguru.pe/"><img src="assets/images/guru-travel-696x371.png" alt="Mobirise" title=""></a>
+                        <a href="https://gurutravel.websguru.pe/" target="_blank"><img src="assets/images/guru-travel-696x371.png" alt="Mobirise" title=""></a>
                         <div class="img-text mbr-text mbr-fonts-style align-center mbr-white display-4">Avanza</div>
                     </div>
                     <div class="card-box">
@@ -528,7 +528,7 @@ de optimización para SEO.</p>
             <div class="card px-3 py-4 col-md-4">
                 <div class="card-wrapper flip-card">
                     <div class="card-img">
-                        <a href="https://guruodontologia.websguru.pe/"><img src="assets/images/gur-odontologa-696x371.png" alt="Mobirise" title=""></a>
+                        <a href="https://guruodontologia.websguru.pe/" target="_blank"><img src="assets/images/gur-odontologa-696x371.png" alt="Mobirise" title=""></a>
                         <div class="img-text mbr-text mbr-fonts-style align-center mbr-white display-4">
                              Acelera</div>
                     </div>
@@ -544,7 +544,7 @@ de optimización para SEO.</p>
             <div class="card px-3 py-4 col-md-4">
                 <div class="card-wrapper flip-card">
                     <div class="card-img">
-                        <a href="https://www.juegosrecreativoswlcing.com/"><img src="assets/images/guru-lidera-696x371.png" alt="Mobirise" title=""></a>
+                        <a href="https://www.juegosrecreativoswlcing.com/" target="_blank"><img src="assets/images/guru-lidera-696x371.png" alt="Mobirise" title=""></a>
                         <div class="img-text mbr-text mbr-fonts-style align-center mbr-white display-4">Lidera</div>
                     </div>
                     <div class="card-box">
@@ -853,7 +853,7 @@ de optimización para SEO.</p>
                 <h2 class="form-title pb-3 mbr-fonts-style mbr-white display-2">Bríndanos tu nombre, correo o teléfono</h2>
                 <h4 class="mbr-fonts-style form-subtitle align-left display-7">&nbsp;</h4>
                 <div data-form-alert="" hidden="">¡Gracias, nos pondremos en contacto contigo!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="KRLl961VNsFR6MBU2wUNSf5UNXcohXTyXq/7bXicgXFjhNBA8KUu/7nfuHmG1jRUmJLHn1BktpXok8pjBhkN2cES27ASUdXgmbSrD+SHGiNfnPHfkYq0xMh6ffvZNJfj">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xjqoI95pFCoBC6evkWxAbYrmwVFpnaigYB6P1p1cdA0yrokBEryirFYgm4rPFIiO+z1Vj9odAW6p3qrYbf+A0wzJx6qHhx71DLWEYYuAdsszVeXp8RTiP1OZZsLLzWWF">
                     <div class="input-wrap" data-for="name">
                         <input type="text" class="field display-7" name="name" data-form-field="Name" required="" placeholder="Tu nombre" id="name-header2-1q">
                     </div>
@@ -893,7 +893,7 @@ de optimización para SEO.</p>
                     <div data-form-alert="" hidden="" class="align-center">¡Gracias por rellenar el formulario!</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="jeJRx5c5m1PjhrSbIJAed+gtoum/eKCE2oV7RTnbrH5+kmkW5cEMTlUlR6G5h66kD/nDjiNN1bYKxm3MaVVpqdkZpoQhP+zRA5tyAgCfd0Hx/dYuTbXb592NpIm6Z17L" data-form-email="true">
+                        <input type="hidden" value="yWZRetBeCXQkIifcZTvQz1Ndq+LOYS4KtFMbmgRergsyQDxiDzPi8rj3LcVcfhfv7I3H3cOTyaaPUKXo4t1iGC242rP09njA3lPRhWOl1LxvTAFVYpaEeuCbJah/Z6Pj" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Ingresa tu Correo electrónico*" id="email-footer3-4">
                         </div>
